QC-41- Added the option of using an existing study to the smoke test suite-

--- a/eSourcePlatform/DCT/DCT.csproj
+++ b/eSourcePlatform/DCT/DCT.csproj
@@ -751,6 +751,18 @@
       <UserCode>true</UserCode>
       <id>c8bba19b-0e01-4959-8b75-2a3feea23117</id>
     </Compile>
+    <Compile Include="SaveAndEnterData.cs">
+      <BoundTo>7fc408fd-445c-47dc-9f8b-f16a4cfc914c</BoundTo>
+      <DependentUpon>SaveAndEnterData.rxrec</DependentUpon>
+      <RecorderCode>true</RecorderCode>
+      <id>aff3bd62-7b2f-46ae-95df-6d731efc11ee</id>
+    </Compile>
+    <Compile Include="SaveAndEnterData.UserCode.cs">
+      <BoundTo>7fc408fd-445c-47dc-9f8b-f16a4cfc914c</BoundTo>
+      <DependentUpon>SaveAndEnterData.rxrec</DependentUpon>
+      <UserCode>true</UserCode>
+      <id>7d1c91a2-8111-481a-99b4-22e4985ba80a</id>
+    </Compile>
     <Compile Include="single sign in\ClickLogin.cs">
       <DependentUpon>ClickLogin.rxrec</DependentUpon>
       <RecorderCode>true</RecorderCode>
@@ -1160,6 +1172,11 @@
       <BoundTo>9ed6b0f0-fd13-425f-b30f-73decc1816cd</BoundTo>
       <id>247645cf-9b93-4901-adbc-45908ed39197</id>
       <recordtableid>36b7cb32-221d-4d60-ba49-8576cfccff8f</recordtableid>
+    </None>
+    <None Include="SaveAndEnterData.rxrec">
+      <BoundTo>9ed6b0f0-fd13-425f-b30f-73decc1816cd</BoundTo>
+      <id>7fc408fd-445c-47dc-9f8b-f16a4cfc914c</id>
+      <recordtableid>221b9d95-5d03-4937-95dd-4c60f7458a89</recordtableid>
     </None>
     <None Include="single sign in\ClickLogin.rxrec">
       <BoundTo>9ed6b0f0-fd13-425f-b30f-73decc1816cd</BoundTo>
