--- a/eSourcePlatform/eSourcePlatform/eSourcePlatform.csproj
+++ b/eSourcePlatform/eSourcePlatform/eSourcePlatform.csproj
@@ -196,6 +196,18 @@
       <UserCode>true</UserCode>
       <id>9643b807-e82c-4fbf-9ca4-26f7047fbb9f</id>
     </Compile>
+    <Compile Include="CSP_Logout.cs">
+      <BoundTo>57c113fc-894c-42f6-a8f3-67988c4eb2fd</BoundTo>
+      <DependentUpon>CSP_Logout.rxrec</DependentUpon>
+      <RecorderCode>true</RecorderCode>
+      <id>fa7699f2-2527-4cdc-8798-be917031531e</id>
+    </Compile>
+    <Compile Include="CSP_Logout.UserCode.cs">
+      <BoundTo>57c113fc-894c-42f6-a8f3-67988c4eb2fd</BoundTo>
+      <DependentUpon>CSP_Logout.rxrec</DependentUpon>
+      <UserCode>true</UserCode>
+      <id>c115eb73-eced-4c4d-bd1f-6869322acd27</id>
+    </Compile>
     <Compile Include="eSourcePlatformRepository.cs">
       <BoundTo>1ff89b80-cba6-4f21-a417-c668d100f247</BoundTo>
       <DependentUpon>eSourcePlatformRepository.rxrep</DependentUpon>
@@ -387,6 +399,11 @@
       <BoundTo>1ff89b80-cba6-4f21-a417-c668d100f247</BoundTo>
       <id>c1a2ab54-3b47-4192-bc3c-198494ec122e</id>
       <recordtableid>2569b4ed-6164-49fa-89df-a5b2c98e2608</recordtableid>
+    </None>
+    <None Include="CSP_Logout.rxrec">
+      <BoundTo>1ff89b80-cba6-4f21-a417-c668d100f247</BoundTo>
+      <id>57c113fc-894c-42f6-a8f3-67988c4eb2fd</id>
+      <recordtableid>8c4fe3be-c7e3-46c9-b6f6-291a064cb1ea</recordtableid>
     </None>
     <None Include="eSourcePlatformRepository.rximg">
       <BoundTo>1ff89b80-cba6-4f21-a417-c668d100f247</BoundTo>
