QC-44 - Added Test case, csv and raw data for FName processor testing

--- a/eSourcePlatform/CSP/CSP.csproj
+++ b/eSourcePlatform/CSP/CSP.csproj
@@ -3685,6 +3685,10 @@
       <id>7598fbff-7aa2-4377-a8a8-848717cfa565</id>
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
+    <None Include="csv\FName.csv">
+      <id>5e3dca05-c021-4776-b04a-73fc708f1114</id>
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
     <None Include="csv\FollowUp.csv">
       <id>a77da540-2f7a-4160-ab93-48de6b108c3f</id>
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
@@ -4047,6 +4051,10 @@
     </None>
     <None Include="rawData\CPAL.txt">
       <id>992bcace-279e-49b1-ae1f-0ba350a72c85</id>
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Include="rawData\FName.txt">
+      <id>6d91b5a5-eaa2-4561-94e1-d84561df5966</id>
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
     <None Include="rawData\FollowUp.txt">
