QC-46 - Added BPSO test cases and files to CSP project allowing testing of processor

--- a/eSourcePlatform/CSP/CSP.csproj
+++ b/eSourcePlatform/CSP/CSP.csproj
@@ -3665,6 +3665,10 @@
       <id>bb7984a0-624e-437a-b763-367cc52e907f</id>
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
+    <None Include="csv\BPSO.csv">
+      <id>f0dcf98d-824a-4f72-b0d2-1e6ccf2a5f7a</id>
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
     <None Include="csv\CBB.csv">
       <id>bf5d1dff-1061-409b-a9c6-c8516f4302c5</id>
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
@@ -4039,6 +4043,10 @@
     </None>
     <None Include="rawData\Baseline.txt">
       <id>d74f5749-f3c4-4764-a0cb-5edf062e3f8c</id>
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Include="rawData\BPSO.txt">
+      <id>b4ed5315-b72c-4d85-ae51-2a21cc26fa0e</id>
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
     <None Include="rawData\CBB.txt">
