QC-45 - Added TwoBack fils and test cases to CSP project

--- a/eSourcePlatform/CSP/CSP.csproj
+++ b/eSourcePlatform/CSP/CSP.csproj
@@ -3725,6 +3725,10 @@
       <id>0d628439-e35b-4f61-909e-edc1701a16da</id>
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
+    <None Include="csv\TwoBack.csv">
+      <id>11c86286-d2df-4dfc-9b0d-86e9641b835a</id>
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
     <None Include="ExtractsPage\Click_DownloadExtract_Button.rxrec">
       <id>304b93b0-7b72-4748-b038-66c5ca99150c</id>
       <BoundTo>bb77de91-48e5-4406-abc3-91f7ae6e5d00</BoundTo>
@@ -4099,6 +4103,10 @@
     </None>
     <None Include="rawData\SAT.txt">
       <id>94276efa-bc67-4143-87b9-a5ffc4ba03cb</id>
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Include="rawData\TwoBack.txt">
+      <id>35d64e09-9fa2-4fba-9d5b-e752136eb309</id>
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
     <None Include="ReportsPage\Click_BatteryConfig_Report.rxrec">
