QC-41- Fixed same naming Expected results

--- a/eSourcePlatform/DCT/DCT.csproj
+++ b/eSourcePlatform/DCT/DCT.csproj
@@ -238,6 +238,18 @@
       <id>49ba2725-1cb9-4482-804e-672204af9ae4</id>
       <BoundTo>9f87f60d-26a5-4baf-97c8-400491dec388</BoundTo>
     </Compile>
+    <Compile Include="Choose_StudyFromDCT.cs">
+      <BoundTo>754f67df-fd79-480d-b927-09156cc22266</BoundTo>
+      <DependentUpon>Choose_StudyFromDCT.rxrec</DependentUpon>
+      <RecorderCode>true</RecorderCode>
+      <id>65ab8fe9-d87a-406b-8c73-43742c3bb640</id>
+    </Compile>
+    <Compile Include="Choose_StudyFromDCT.UserCode.cs">
+      <BoundTo>754f67df-fd79-480d-b927-09156cc22266</BoundTo>
+      <DependentUpon>Choose_StudyFromDCT.rxrec</DependentUpon>
+      <UserCode>true</UserCode>
+      <id>1a2cb38f-5ce1-4bd8-ac5a-0a1bed7e82f3</id>
+    </Compile>
     <Compile Include="CSPLogOut.cs">
       <BoundTo>9faa5ebd-25af-4b86-96d0-037daf3d503c</BoundTo>
       <DependentUpon>CSPLogOut.rxrec</DependentUpon>
@@ -963,6 +975,11 @@
       <BoundTo>9ed6b0f0-fd13-425f-b30f-73decc1816cd</BoundTo>
       <id>9f87f60d-26a5-4baf-97c8-400491dec388</id>
       <recordtableid>7bceac10-42f9-4317-8de5-3e37a1b5b379</recordtableid>
+    </None>
+    <None Include="Choose_StudyFromDCT.rxrec">
+      <BoundTo>9ed6b0f0-fd13-425f-b30f-73decc1816cd</BoundTo>
+      <id>754f67df-fd79-480d-b927-09156cc22266</id>
+      <recordtableid>6e3abea5-a900-46a4-8782-4f6cf7de41ff</recordtableid>
     </None>
     <None Include="CSPLogOut.rxrec">
       <BoundTo>9ed6b0f0-fd13-425f-b30f-73decc1816cd</BoundTo>
