QC-50 - Added new raw data and expected results to support a testing of a battery containing multiple tasks

--- a/eSourcePlatform/CSP/CSP.csproj
+++ b/eSourcePlatform/CSP/CSP.csproj
@@ -3810,6 +3810,10 @@
       <id>bb7984a0-624e-437a-b763-367cc52e907f</id>
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
+    <None Include="csv\BatteryOne.csv">
+      <id>fd441c63-38e6-4171-bedc-f362a5de4923</id>
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
     <None Include="csv\BPSO.csv">
       <id>f0dcf98d-824a-4f72-b0d2-1e6ccf2a5f7a</id>
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
@@ -4229,6 +4233,10 @@
     </None>
     <None Include="rawData\Baseline.txt">
       <id>d74f5749-f3c4-4764-a0cb-5edf062e3f8c</id>
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Include="rawData\BatteryOne.txt">
+      <id>0a1b0739-4eb9-4e90-a135-273a3fe300d2</id>
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
     <None Include="rawData\BPSO.txt">
