QC-50 - Added new Raw data and expected results to allow condensed run time for regression script

--- a/eSourcePlatform/CSP/CSP.csproj
+++ b/eSourcePlatform/CSP/CSP.csproj
@@ -3729,7 +3729,7 @@
       <BoundTo>e421d7ee-56d4-498a-bcd8-1c82a2c916a5</BoundTo>
       <DependentUpon>CSP.rxtst</DependentUpon>
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-      <id>7e5dcc4f-f5be-4ed9-a06e-d5302ecea002</id>
+      <id>d09dac28-2044-469d-9e52-2b27f78789d9</id>
     </Content>
     <None Include="BatteriesPage\Click_Add_Battery.rxrec">
       <id>8e12fa6b-a51d-4dbf-b74f-c2ed366556a3</id>
@@ -3855,6 +3855,14 @@
     </None>
     <None Include="csv\BatteryOne.csv">
       <id>fd441c63-38e6-4171-bedc-f362a5de4923</id>
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Include="csv\BatteryThree.csv">
+      <id>c51b1d7c-9aa2-42c5-9567-3aa49ee3e6d4</id>
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Include="csv\BatteryTwo.csv">
+      <id>b0c4bbfc-e277-487a-93e1-d0bc46896c94</id>
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
     <None Include="csv\BPSO.csv">
@@ -4265,13 +4273,6 @@
       <BoundTo>bb77de91-48e5-4406-abc3-91f7ae6e5d00</BoundTo>
       <recordtableid>8fcaef85-3e83-4eda-af4f-2994a161feee</recordtableid>
     </None>
-    <Content Include="PR_Authentication.csv">
-      <Link>PR_Authentication.csv</Link>
-      <BoundTo>e421d7ee-56d4-498a-bcd8-1c82a2c916a5</BoundTo>
-      <DependentUpon>CSP.rxtst</DependentUpon>
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-      <id>2d2638ae-b6ef-4b25-85c2-59bf7d5e3814</id>
-    </Content>
     <None Include="PowerBI_Report.rxrec">
       <BoundTo>bb77de91-48e5-4406-abc3-91f7ae6e5d00</BoundTo>
       <id>757c0b9a-18c1-498d-a2a6-f29638c2e011</id>
@@ -4295,6 +4296,14 @@
     </None>
     <None Include="rawData\BatteryOne.txt">
       <id>0a1b0739-4eb9-4e90-a135-273a3fe300d2</id>
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Include="rawData\BatteryThree.txt">
+      <id>7b8f3658-c246-4d52-ad8e-d0bc20d3647e</id>
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Include="rawData\BatteryTwo.txt">
+      <id>edc54d2c-ca59-4731-a8a2-4b50ca92d0bf</id>
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
     <None Include="rawData\BPSO.txt">
