QC-47- Organizing the API calls and added a Creation study API Call.

--- a/eSourcePlatform/CSP/CSP.csproj
+++ b/eSourcePlatform/CSP/CSP.csproj
@@ -1595,6 +1595,18 @@
       <UserCode>true</UserCode>
       <id>e5aa65aa-7f0a-4db0-8a13-fe70058127f3</id>
     </Compile>
+    <Compile Include="CreateCSPStudy.cs">
+      <BoundTo>6fc90c84-6374-47d0-a7b6-80de64eb7b0e</BoundTo>
+      <DependentUpon>CreateCSPStudy.rxrec</DependentUpon>
+      <RecorderCode>true</RecorderCode>
+      <id>c8f6f3df-f949-4391-a98d-f6009472e619</id>
+    </Compile>
+    <Compile Include="CreateCSPStudy.UserCode.cs">
+      <BoundTo>6fc90c84-6374-47d0-a7b6-80de64eb7b0e</BoundTo>
+      <DependentUpon>CreateCSPStudy.rxrec</DependentUpon>
+      <UserCode>true</UserCode>
+      <id>4b910154-b68e-4b6e-86d7-be8ca96edf11</id>
+    </Compile>
     <Compile Include="CSPRepository.cs">
       <BoundTo>bb77de91-48e5-4406-abc3-91f7ae6e5d00</BoundTo>
       <DependentUpon>CSPRepository.rxrep</DependentUpon>
@@ -3825,6 +3837,11 @@
       <BoundTo>bb77de91-48e5-4406-abc3-91f7ae6e5d00</BoundTo>
       <id>736781f6-6c3a-402e-9413-966838fac367</id>
       <recordtableid>7fb7a567-b6ea-401d-9958-944d9c9515bc</recordtableid>
+    </None>
+    <None Include="CreateCSPStudy.rxrec">
+      <BoundTo>bb77de91-48e5-4406-abc3-91f7ae6e5d00</BoundTo>
+      <id>6fc90c84-6374-47d0-a7b6-80de64eb7b0e</id>
+      <recordtableid>346b7e0d-e7a3-4aef-ae8e-ab1ebe75ef3c</recordtableid>
     </None>
     <None Include="CSPRepository.rximg">
       <BoundTo>bb77de91-48e5-4406-abc3-91f7ae6e5d00</BoundTo>
